# smartedu-helper

./: .gitignore  .gitmodules  README.md  README_zh.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  sync.yml  update_list.yml
assets/: icon.icns
core/: __init__.py  auth.py  booklist.py  config.py  download.py  main.py  parser.py  webview_login.py
i18n/: en_US.ts  zh_CN.qm  zh_CN.ts
src/: main.qml
src/components/: CommandCase.qml  CredentialInfo.qml  DownloadDialog.qml  DownloadItem.qml  LinkInfo.qml  qmldir
src/pages/: credential.qml  download.qml  downloads.qml  settings.qml
src/pages/book/: junior.qml  junior54.qml  primary.qml  primary54.qml  senior.qml  special.qml  speicial.qml
